--- a/src/home/home.scss
+++ b/src/home/home.scss
@@ -18,10 +18,12 @@
             align-items: center;
             padding: 10px;
 
+
             & figure {
 
                 display: flex;
                 gap: 10px;
+                align-items: center;
 
             }
 
@@ -40,6 +42,7 @@
                     outline: none;
                     width: 90%;
                     border: none;
+                    color: white;
 
                     &::placeholder {
                         color: rgb(219, 214, 214);
@@ -68,11 +71,28 @@
                 border: none;
                 padding: 10px;
                 background-color: #2F363D;
+                position: relative;
+                display: flex;
+                font-size: 20px;
+                color: #13B497;
+
 
                 &:hover {
                     scale: 1.1;
                     opacity: .6;
                     transition: opacity scale .3s;
+                }
+             
+
+                & div {
+                    height: 20px;
+                    background-color: #D9B75F;
+                    position: absolute;
+                    top: -10px;
+                    right: -5px;
+                    border-radius: 50%;
+
+                 
                 }
 
 
@@ -84,6 +104,7 @@
                 height: 40px;
                 display: flex;
                 justify-content: space-between;
+                color: white;
 
 
                 & div {
@@ -191,7 +212,7 @@
             width: 50%;
             display: flex;
             flex-direction: column;
-            padding-left: 30px;
+            padding: 15px;
 
 
             & figure {
@@ -211,11 +232,11 @@
 
             .swiper {
                 width: 100%;
-                padding: 25px;
+                padding: 10px 25px;
 
                 & img {
                     width: 100%;
-                    height: 350px;
+                    height: 430px;
                     object-fit: cover;
                     border-radius: 8px;
 
@@ -225,18 +246,39 @@
         }
     }
 }
+
 .hidden {
     display: none;
 }
 
 @media (max-width : 1000px) {
     .home {
+        .logo {
+            height: 40px;
+
+        }
 
         &__header {
 
-            &__left  section {
+            &__left section {
                 display: none;
+
+
             }
+
+            &__right {
+                justify-content: end;
+
+                & section {
+
+                    width: 200px;
+
+                }
+            }
+        }
+
+        & strong {
+            display: none;
         }
 
         &__graphics {
@@ -257,14 +299,16 @@
 
             &__right {
                 width: 100%;
-                padding-left: 0;
+                padding: 0;
 
                 & h3 {
                     text-align: center;
                     padding-left: 0;
                     font-size: 14px;
                 }
+
                 .swiper {
+                    padding: 20px;
 
                     & img {
                         height: 200px;
