--- a/src/home/home.scss
+++ b/src/home/home.scss
@@ -1,3 +1,12 @@
+::-webkit-scrollbar {
+    width: 7px;
+
+    &-thumb {
+        background-color: gray;
+        border-radius: 5px;
+    }
+}
+
 .home {
     background-color: #24292E;
     width: 100%;
@@ -5,6 +14,8 @@
     display: flex;
     flex-direction: column;
     color: white;
+
+
 
     &__header {
         width: 100%;
@@ -26,6 +37,8 @@
                 display: flex;
                 gap: 10px;
                 align-items: center;
+                cursor: pointer;
+
 
             }
 
@@ -38,6 +51,7 @@
                 padding: 10px;
                 background-color: #1C2126;
                 border-radius: 8px;
+                color: gray;
 
                 & input {
                     background-color: transparent;
@@ -87,10 +101,11 @@
 
 
                 & div {
-                    height: 20px;
+                    content: '';
+                    height: 14px;
                     background-color: #D9B75F;
                     position: absolute;
-                    top: -10px;
+                    top: -5px;
                     right: -5px;
                     border-radius: 50%;
 
@@ -102,7 +117,7 @@
             }
 
             & section {
-                width: 350px;
+                width: 70%;
                 height: 40px;
                 display: flex;
                 justify-content: space-between;
@@ -114,6 +129,8 @@
                     display: flex;
                     justify-content: space-evenly;
                     align-items: center;
+
+                   
 
 
                 }
@@ -135,6 +152,7 @@
                 border: 1px solid gray;
                 border-radius: 8px;
                 cursor: pointer;
+                background-color: red;
 
 
 
@@ -169,6 +187,7 @@
         height: 50px;
         display: flex;
         align-items: center;
+        font-size: 14px;
     }
 
     &__graphics {
@@ -216,23 +235,21 @@
             width: 50%;
             display: flex;
             flex-direction: column;
-            padding: 12px;
             height: 100%;
 
 
             & figure {
                 width: 100%;
-                padding: 0;
-                margin-top: -10px;
 
                 & img {
                     width: 100%;
                 }
             }
 
-            & h3 {
+            & small {
                 padding-left: 20px;
                 color: white;
+                font-size: 30px;
 
 
             }
@@ -241,9 +258,10 @@
                 width: 100%;
                 padding: 10px 25px;
 
+
                 & img {
                     width: 100%;
-                    height: 415px;
+                    height: 390px;
                     object-fit: cover;
                     border-radius: 8px;
 
@@ -308,10 +326,10 @@
                 width: 100%;
                 padding: 0;
 
-                & h3 {
+                & small {
                     text-align: center;
                     padding-left: 0;
-                    font-size: 14px;
+                    font-size: 16px;
                 }
 
                 .swiper {
