--- a/src/home/home.scss
+++ b/src/home/home.scss
@@ -130,7 +130,7 @@
                     justify-content: space-evenly;
                     align-items: center;
 
-                   
+
 
 
                 }
@@ -152,7 +152,7 @@
                 border: 1px solid gray;
                 border-radius: 8px;
                 cursor: pointer;
-                background-color: red;
+
 
 
 
@@ -163,6 +163,8 @@
                     cursor: pointer;
                     width: 60%;
                     font-size: 15px;
+                    color: white;
+
 
                 }
 
