--- a/src/home/home.scss
+++ b/src/home/home.scss
@@ -117,7 +117,7 @@
             }
 
             & section {
-                width: 70%;
+                width: 60%;
                 height: 40px;
                 display: flex;
                 justify-content: space-between;
@@ -130,11 +130,7 @@
                     justify-content: space-evenly;
                     align-items: center;
 
-
-
-
                 }
-
 
             }
 
@@ -145,35 +141,23 @@
             }
 
 
-
             &__user {
 
                 height: 40px;
                 border: 1px solid gray;
                 border-radius: 8px;
                 cursor: pointer;
+                display: flex;
+                align-items: center;
+                width: 150px;
+                justify-content: space-around;
 
-
-
-
-                & select {
-                    background-color: transparent;
-                    border: none;
-                    outline: none;
-                    cursor: pointer;
-                    width: 60%;
-                    font-size: 15px;
-                    color: white;
-
-
-                }
 
             }
 
             .userPhoto {
-                width: 40px;
-                padding: 10px;
-                height: 100%;
+                width: 20px;
+                height: 20px;
             }
 
 
@@ -300,6 +284,10 @@
 
                     width: 200px;
 
+                }
+
+                &__user {
+                    width: 80px;
                 }
             }
         }
