--- a/src/home/home.scss
+++ b/src/home/home.scss
@@ -41,6 +41,7 @@
 
 
             }
+           
 
             & section {
                 height: 40px;
@@ -58,7 +59,8 @@
                     outline: none;
                     width: 90%;
                     border: none;
-                    color: white;
+                    color: #13B497;
+
 
                     &::placeholder {
                         color: rgb(219, 214, 214);
